--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-Login==0.4.1
 flask-paginate==0.5.1
 itsdangerous==0.24
 Jinja2==2.10
+Markdown==3.0.1
 MarkupSafe==1.0
 mypy==0.641
 mypy-extensions==0.4.1
