--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Markdown==3.0.1
 MarkupSafe==1.0
 mypy==0.641
 mypy-extensions==0.4.1
+Pygments==2.3.1
 pymongo==3.7.2
 pyscrypt==1.6.2
 python-dateutil==2.8.0
