--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+certifi==2019.6.16
+chardet==3.0.4
 click==6.7
 feedgen==0.7.0
 Flask==1.0.2
 Flask-Login==0.4.1
 flask-paginate==0.5.1
+idna==2.8
 itsdangerous==0.24
 Jinja2==2.10
 lxml==4.3.1
@@ -14,6 +17,8 @@ Pygments==2.3.1
 pymongo==3.7.2
 pyscrypt==1.6.2
 python-dateutil==2.8.0
+requests==2.22.0
 six==1.12.0
 typed-ast==1.1.0
+urllib3==1.25.3
 Werkzeug==0.14.1
