--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2019.6.16
 chardet==3.0.4
 click==6.7
 feedgen==0.7.0
+feedparser==5.2.1
 Flask==1.0.2
 Flask-Login==0.4.1
 flask-paginate==0.5.1
