--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bleach==3.1.1
 certifi==2019.6.16
 chardet==3.0.4
 click==6.7
@@ -12,6 +13,7 @@ Jinja2==2.10
 lxml==4.3.1
 Markdown==3.0.1
 MarkupSafe==1.0
+mdx-bleach==0.1.4
 mypy==0.641
 mypy-extensions==0.4.1
 Pygments==2.3.1
@@ -23,4 +25,5 @@ six==1.12.0
 typed-ast==1.1.0
 Unidecode==1.1.1
 urllib3==1.25.3
+webencodings==0.5.1
 Werkzeug==0.14.1
